[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskchain"
dynamic = ["version"]
description = "A lightweight task orchestration module for modular and simple pipelines."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Alejandro Avendaño" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/alejandro-avendano/taskchain"
Documentation = "https://github.com/alejandro-avendano/taskchain#readme"
Issues = "https://github.com/alejandro-avendano/taskchain/issues"
Source = "https://github.com/alejandro-avendano/taskchain"

[tool.hatch.build.targets.wheel]
packages = ["src/taskchain"]

[tool.hatch.version]
path = "src/taskchain/__init__.py"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
